# adventofcode2025

./: CMakeLists.txt  build.bat  configure.bat  test.bat
2015/1/: CMakeLists.txt  day1.cpp
2015/1/tests/: expected1.txt  expected4.txt  test4.txt
2025/: CMakeLists.txt
2025/1/: CMakeLists.txt
2025/2/: CMakeLists.txt
2025/3/: CMakeLists.txt
2025/4/: CMakeLists.txt  day4.cpp
2025/4/tests/: expected1.txt
2025/5/: CMakeLists.txt  day5.cpp
2025/5/tests/: expected1.txt
2025/7/: CMakeLists.txt  day7.cpp
2025/7/tests/: expected1.txt
2025/9/: CMakeLists.txt  day9.cpp
day/1/: CMakeLists.txt  day1.cpp  expected2.txt  expected3.txt  expected4.txt  expected5.txt  expected6.txt  expected8.txt  test4.txt  test5.txt  test9.txt
day/1/tests/: expected1.txt  expected5.txt  expected6.txt  expected7.txt  expected9.txt  test2.txt  test3.txt  test6.txt  test7.txt  test8.txt
